--- a/django-starter/templates/layouts/box.html
+++ b/django-starter/templates/layouts/box.html
@@ -2,7 +2,7 @@
 
 {% block layout %}
 <content class="block max-w-3xl mx-auto md:p-12">
-    <div class="bg-white rounded-2xl md:drop-shadow-2xl shadow-black w-full p-8">
+    <div class="bg-white rounded-2xl md:drop-shadow-2xl shadow-black w-full p-8 h-[70vh] md:h-[85vh]">
 
     {% block content %} 
     {% endblock %}
