--- a/django-starter/a_users/templates/a_users/social_login.html
+++ b/django-starter/a_users/templates/a_users/social_login.html
@@ -19,12 +19,12 @@
         <span class="text-center w-full">Sign in with Google</span>
     </a>
 
-    <a class="relative flex items-center p-4 rounded-full border !no-underline hover:!text-inherit hover:!bg-gray-100 w-full" href="{% provider_login_url 'github' %}">
+    <!-- <a class="relative flex items-center p-4 rounded-full border !no-underline hover:!text-inherit hover:!bg-gray-100 w-full" href="{% provider_login_url 'github' %}">
         <svg class="w-6 h-6 absolute left-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <path d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.18 6.84 9.5.5.09.66-.22.66-.48 0-.24-.01-1.04-.01-1.9-2.78.58-3.37-1.18-3.37-1.18-.45-1.15-1.1-1.46-1.1-1.46-.9-.62.07-.6.07-.6 1 .07 1.52 1.03 1.52 1.03.9 1.51 2.36 1.07 2.94.82.09-.66.35-1.07.63-1.31-2.22-.25-4.56-1.11-4.56-4.95 0-1.09.39-1.99 1.03-2.69-.1-.26-.45-1.29.1-2.69 0 0 .84-.27 2.75 1.02a9.56 9.56 0 0 1 5 0c1.91-1.29 2.75-1.02 2.75-1.02.55 1.4.2 2.43.1 2.69.64.7 1.03 1.6 1.03 2.69 0 3.85-2.34 4.7-4.57 4.95.36.31.68.91.68 1.84 0 1.33-.01 2.41-.01 2.74 0 .26.16.58.67.48A10.012 10.012 0 0 0 22 12c0-5.52-4.48-10-10-10z"/>
         </svg>
         <span class="text-center w-full">Sign in with GitHub</span>
-    </a>
+    </a> -->
 
     <!-- <a class="relative flex items-center p-4 rounded-full border !no-underline hover:!text-inherit hover:!bg-gray-100 w-full" href="">
         <svg class="w-6 h-6 absolute left-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
